<resources>
    <string name="app_name">CalculationTest</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_message">Calculation Test</string>
    <string name="title_button">Enter</string>
    <string name="high_score_message">High Score:%d</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_clear">c</string>
    <string name="button_submit">OK</string>
    <string name="equal_symbol">=</string>
    <string name="question_mark">\?</string>
    <string name="current_score">Score:%d</string>
    <string name="input_indicator">Your Answer:</string>
    <string name="lose_image_message">lose image</string>
    <string name="win_image_message">win image</string>
    <string name="lose_message">You Lose!</string>
    <string name="win_message">You Win!</string>
    <string name="lose_score_message">Your Score:%d</string>
    <string name="win_score_message">New Score:%d</string>
    <string name="button_back_to_title">Back</string>
    <string name="answer_correct_message">Correct! Go on!</string>
    <string name="dialog_quit_message">Are you sure you want to quit?</string>
    <string name="dialog_positive_message">OK</string>
    <string name="dialog_negative_message">Cancel</string>
</resources>
